--- a/css/about.css
+++ b/css/about.css
@@ -9,25 +9,20 @@ display: block;
   }
   .about-main-text{
     color: #fff;
-    padding-top: 100px;
     font-size: 48px;
     font-weight: bold;
-
-    margin-bottom: 100px;
+    margin: 100px 0;
   }
   .about-box{
     display: flex;
   }
   
   .about-img-box{
-    display: flex;
-    justify-content: center;
-    align-items: center;
     width: 300px;
   }
   .about-img-box img{
     width: 100%;
-    margin: 0 30px;
+    min-width: 200px;
     border-radius: 20px;
   }
   .about-text{
@@ -83,3 +78,41 @@ display: block;
     font-size: 14px;
     color: rgb(10, 205, 206);
   }
+  .skills2{
+    display: none;
+    width: 100%;
+    margin-bottom: 10px;
+  }
+  .skills2 li{
+    width: 100px;
+    height: 50px;
+    line-height: 50px;
+    border-radius: 50px;
+    border: 1px solid rgb(10, 205, 206);
+    margin-right: 10px;
+  }
+  .skills2 li p{
+    text-align: center;
+    font-size: 14px;
+    color: rgb(10, 205, 206);
+  }
+  @media  all and (max-width: 1024px) {
+    
+  }
+  @media  all and (max-width: 768px) {
+    .skills{
+      display: none;
+    }
+    .skills2{
+      display: flex;
+    }
+  }
+  @media  all and (max-width: 533px) {
+    .about-text{
+      margin:0 ;
+    }
+    .about-img-box{
+      display: none;
+    }
+  }
+ 
