--- a/css/header.css
+++ b/css/header.css
@@ -5,14 +5,23 @@
     height: 100px;
     z-index: 9;
   }
-  .header:hover{
-    background-color: rgba(255, 255, 255, 0.05);
-  }
+  .fa-bars{
+opacity: 0;
+  position: absolute;
+  top: 40px;
+  right: 32px;
+  font-size: 24px;
+  color: #f0f0f0;
+  cursor: pointer;
+}
   .header-box{
     display: flex;
     justify-content: space-between;
     width: 100%;
+    padding: 0 30px;
+    height: 100px;
     line-height: 100px;
+    background-color: #242424;
   }
   .logo-box {
     width: 100px;
@@ -32,7 +41,7 @@
   }
   .header-menu ul li a{
     color: #fff;
-    font-size: 1.6rem;
+    font-size: 24px;
     font-weight: 700;
   }
   
@@ -62,6 +71,38 @@
     
   }
   @media  all and (max-width: 768px) {
+    .fa-bars{
+      opacity: 1;
+    }
+    .header-box{
+      display: flex;
+      flex-direction: column;
+      padding: 0;
+    }
+    .header-menu{
+      width: 100%;
+      display: none;
+    }
+    .header-menu.active{
+      display: flex;
+      justify-content: center;
+      margin-top: 50px;
+      background-color: #242424;
+    }
+    .header-menu ul{
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      font-size: 18px;
+    }
+    .header-menu li{
+      width: 100%;
+      margin: 0;
+      
+    }
+    .header-menu ul li:hover{
+      background-color: #2c2929;
+    }
     
   }
   @media  all and (max-width: 480px) {
